# hmm-market-regime-detection

./: Cargo.toml
data/: quotes.csv
src/: backtest.rs  data.rs  hmm.rs  main.rs  strategy.rs  viterbi.rs
