[package]
name = "hmm-market-regime-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
ndarray-stats = "0.5"
ndarray-rand = "0.14"
yahoo_finance_api = "3.0.0"
tokio = { version = "1.0", features = ["full"] }
time = "0.3.39"
chrono = "0.4.40"
plotters = "0.3.7"